--- a/QuanLyChuyenDe/QuanLyChuyenDe.csproj
+++ b/QuanLyChuyenDe/QuanLyChuyenDe.csproj
@@ -124,5 +124,15 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj">
+      <Project>{cbbd68bd-2d13-4ebd-868b-239ed4df9026}</Project>
+      <Name>BUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{dae93980-3b05-4db3-8cb3-30f6175946d9}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
