--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="ChuyenDe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinhVien.cs" />
+    <Compile Include="TaiKhoan.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
