--- a/QuanLyChuyenDe/QuanLyChuyenDe.csproj
+++ b/QuanLyChuyenDe/QuanLyChuyenDe.csproj
@@ -47,28 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="dangky.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="dangky.Designer.cs">
-      <DependentUpon>dangky.cs</DependentUpon>
-    </Compile>
     <Compile Include="DangKyCD.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DangKyCD.Designer.cs">
       <DependentUpon>DangKyCD.cs</DependentUpon>
     </Compile>
-    <Compile Include="dangnhap.cs">
+    <Compile Include="Dangnhap.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dangnhap.Designer.cs">
-      <DependentUpon>dangnhap.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataClasses1.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    <Compile Include="Dangnhap.Designer.cs">
+      <DependentUpon>Dangnhap.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,14 +68,11 @@
       <DependentUpon>QuanLy.cs</DependentUpon>
     </Compile>
     <Compile Include="sqlconnections.cs" />
-    <EmbeddedResource Include="dangky.resx">
-      <DependentUpon>dangky.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="DangKyCD.resx">
       <DependentUpon>DangKyCD.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dangnhap.resx">
-      <DependentUpon>dangnhap.cs</DependentUpon>
+    <EmbeddedResource Include="Dangnhap.resx">
+      <DependentUpon>Dangnhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,14 +86,6 @@
     <EmbeddedResource Include="QuanLy.resx">
       <DependentUpon>QuanLy.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="DataClasses1.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataClasses1.dbml.layout">
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -126,7 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUS\BUS.csproj">
-      <Project>{cbbd68bd-2d13-4ebd-868b-239ed4df9026}</Project>
+      <Project>{d6b9228a-0c40-49fc-9238-22c9006cc396}</Project>
       <Name>BUS</Name>
     </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
