--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,6 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL_ChuyenDe.cs" />
+    <Compile Include="DAL_DangKi.cs" />
+    <Compile Include="DAL_DangKyNhom.cs" />
+    <Compile Include="DAL_Nhom.cs" />
+    <Compile Include="DAL_SinhVien.cs" />
+    <Compile Include="DAL_TaiKhoan.cs" />
     <Compile Include="DBConnect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
